--- a/tests/common.neon
+++ b/tests/common.neon
@@ -1,5 +1,5 @@
 #
-# Redis DB exchange plugin DI configuration
+# Plugin DI configuration
 #
 # @license		More in license.md
 # @copyright	https://www.fastybird.com
