--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
     "clue/redis-react": "^2.5",
     "contributte/console": "^0.9",
     "fastybird/datetime-factory": "^0.2",
+    "fastybird/exchange-plugin": "^0.3.1",
     "fastybird/modules-metadata": "^0.7",
     "fastybird/web-server": "^0.3.0",
     "nette/bootstrap": "^3.0",
