--- a/.pylintrc
+++ b/.pylintrc
@@ -2,3 +2,9 @@
 
 # Maximum number of characters on a single line.
 max-line-length=120
+
+# Minimum number of public methods for a class (see R0903).
+min-public-methods=1
+
+# Maximum number of arguments for function / method
+max-args=7
