--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -295,16 +295,17 @@ jobs:
 
     strategy:
       matrix:
+        python: ["3.9"]
         operating-system: ["ubuntu-latest"]
 
     steps:
       - name: "Checkout"
         uses: "actions/checkout@v2"
 
-      - name: "Set up Python 3.7"
+      - name: "Set up Python ${{ matrix.python }}"
         uses: "actions/setup-python@v1"
         with:
-          python-version: 3.7
+          python-version: ${{ matrix.python }}
 
       - name: "Extract version"
         uses: "battila7/get-version-action@v2"
