Reverting configuration changes

--- a/tests/common.neon
+++ b/tests/common.neon
@@ -19,7 +19,7 @@ extensions:
     fbSocketServerFactory   : FastyBird\SocketServerFactory\DI\SocketServerFactoryExtension
 
 fbRedisDbExchangePlugin:
-    async: true
+    enableAsync: true
     connection:
         default:
             host: 127.0.0.1
