--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
 
   "require" : {
     "php": ">=7.4.0|>=8.0.0",
-    "clue/redis-react": "^2.5",
+    "clue/redis-protocol": "^0.3",
     "cweagans/composer-patches": "^1.7",
     "fastybird/datetime-factory": "^0.3",
     "fastybird/exchange": "^0.7",
