--- a/composer.json
+++ b/composer.json
@@ -44,8 +44,8 @@
     "clue/redis-protocol": "^0.3",
     "cweagans/composer-patches": "^1.7",
     "fastybird/datetime-factory": "^0.4",
-    "fastybird/exchange": "^0.39",
-    "fastybird/metadata": "^0.56",
+    "fastybird/exchange": "^0.41",
+    "fastybird/metadata": "^0.59",
     "fastybird/socket-server-factory": "^0.4",
     "nette/bootstrap": "^3.0",
     "nette/di": "^3.0",
@@ -84,7 +84,12 @@
   },
 
   "config" : {
-    "sort-packages" : true
+    "sort-packages" : true,
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true,
+      "cweagans/composer-patches": true,
+      "phpstan/extension-installer": true
+    }
   },
 
   "extra" : {
