--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 redis>=3.5
-fastybird-exchange>=0.42
-fastybird-metadata>=0.60
-kink==0.6.3
+fastybird-exchange>=0.43
+fastybird-metadata>=0.61
+kink>=0.6
 setuptools>=57.4
 whistle>=1.0
