--- a/tests/common.neon
+++ b/tests/common.neon
@@ -16,6 +16,7 @@ php:
 extensions:
     fbDateTimeFactory       : FastyBird\DateTimeFactory\DI\DateTimeFactoryExtension
     fbMetadata              : FastyBird\Metadata\DI\MetadataExtension
+    fbExchange              : FastyBird\Exchange\DI\ExchangeExtension
     fbSocketServerFactory   : FastyBird\SocketServerFactory\DI\SocketServerFactoryExtension
     ipubPhone               : IPub\Phone\DI\PhoneExtension
 
