--- a/composer.json
+++ b/composer.json
@@ -40,28 +40,28 @@
   "minimum-stability" : "dev",
 
   "require" : {
-    "php": ">=8.0.0|>=8.1.0",
-    "clue/redis-protocol": "^0.3",
-    "cweagans/composer-patches": "^1.7",
-    "fastybird/datetime-factory": "^0.5",
-    "fastybird/exchange" : "^0.59",
-    "fastybird/metadata" : "^0.76",
-    "fastybird/socket-server-factory": "^0.5",
-    "nette/bootstrap": "^3.0",
-    "nette/di": "^3.0",
-    "nette/utils": "^3.2",
-    "predis/predis": "^1.1",
-    "psr/event-dispatcher": "^1.0",
-    "psr/log": "^1.1|^3.0",
-    "ramsey/uuid": "^4.0",
-    "symfony/event-dispatcher": "^5.4"
+    "php" : ">=8.1.0",
+    "clue/redis-react" : "^2.6",
+    "cweagans/composer-patches" : "^1.7",
+    "fastybird/datetime-factory" : "^0.6",
+    "fastybird/exchange" : "^0.61",
+    "fastybird/metadata" : "^0.77",
+    "nette/bootstrap" : "^3.0",
+    "nette/di" : "^3.0",
+    "nette/utils" : "^3.2",
+    "predis/predis" : "^1.1",
+    "psr/event-dispatcher" : "^1.0",
+    "psr/log" : "^1.1|^3.0",
+    "ramsey/uuid" : "^4.0",
+    "symfony/event-dispatcher" : "^5.4"
   },
 
   "require-dev" : {
     "mockery/mockery" : "^1.4",
     "ninjify/nunjuck" : "^0.3",
-    "ninjify/qa" : "^0.13",
+    "orisai/coding-standard" : "^3.2",
     "pds/skeleton" : "^1.0",
+    "php-parallel-lint/php-parallel-lint" : "^1.3",
     "phpstan/extension-installer" : "^1.1",
     "phpstan/phpstan" : "^1.8",
     "phpstan/phpstan-deprecation-rules" : "^1.0",
@@ -78,17 +78,16 @@
 
   "autoload-dev" : {
     "psr-4" : {
-      "Tests\\Cases\\" : "tests/cases",
-      "Tests\\Fixtures\\" : "tests/fixtures"
+      "Tests\\Cases\\Unit\\" : "tests/cases/unit"
     }
   },
 
   "config" : {
     "sort-packages" : true,
-    "allow-plugins": {
-      "dealerdirect/phpcodesniffer-composer-installer": true,
-      "cweagans/composer-patches": true,
-      "phpstan/extension-installer": true
+    "allow-plugins" : {
+      "dealerdirect/phpcodesniffer-composer-installer" : true,
+      "cweagans/composer-patches" : true,
+      "phpstan/extension-installer" : true
     }
   },
 
