Refactoring async client

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -4,3 +4,5 @@ parameters:
     stubFiles:
         - tests/stubs/PromiseInterface.stub
         - tests/stubs/ExtendedPromiseInterface.stub
+        - tests/stubs/Client.stub
+        - tests/stubs/EventEmitterInterface.stub
