--- a/composer.json
+++ b/composer.json
@@ -40,20 +40,21 @@
   "minimum-stability" : "dev",
 
   "require" : {
-    "php" : ">=8.1.0",
-    "clue/redis-react" : "^2.6",
-    "cweagans/composer-patches" : "^1.7",
-    "fastybird/datetime-factory" : "^0.6",
-    "fastybird/exchange" : "^0.61",
-    "fastybird/metadata" : "^0.77",
-    "nette/bootstrap" : "^3.0",
-    "nette/di" : "^3.0",
-    "nette/utils" : "^3.2",
-    "predis/predis" : "^1.1",
-    "psr/event-dispatcher" : "^1.0",
-    "psr/log" : "^1.1|^3.0",
-    "ramsey/uuid" : "^4.0",
-    "symfony/event-dispatcher" : "^5.4"
+    "php": ">=8.1.0",
+    "clue/redis-react": "^2.6",
+    "cweagans/composer-patches": "^1.7",
+    "fastybird/datetime-factory": "^0.6",
+    "fastybird/exchange": "^0.61",
+    "fastybird/metadata": "^0.77",
+    "nette/bootstrap": "^3.0",
+    "nette/di": "^3.0",
+    "nette/utils": "^3.2",
+    "predis/predis": "^1.1",
+    "psr/event-dispatcher": "^1.0",
+    "psr/log": "^1.1|^3.0",
+    "ramsey/uuid": "^4.0",
+    "react/async": "^4.0",
+    "symfony/event-dispatcher": "^5.4"
   },
 
   "require-dev" : {
@@ -78,7 +79,8 @@
 
   "autoload-dev" : {
     "psr-4" : {
-      "Tests\\Cases\\Unit\\" : "tests/cases/unit"
+      "Tests\\Cases\\Unit\\" : "tests/cases/unit",
+      "Tests\\Fixtures\\" : "tests/fixtures"
     }
   },
 
