--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name" : "fastybird/redisdb-plugin",
   "type" : "plugin",
-  "description" : "FastyBird Redis database data storage & exchange plugin",
+  "description" : "FastyBird IoT data storage & exchange plugin for Redis database",
   "keywords" : [
     "fastybird",
     "fb",
